src/test/ui/generic-associated-types/issue-68649.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/issue-68649.rs:1:12
  |
1 | #![feature(generic_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0271]: type mismatch resolving `for<'b> <{integer} as Fun>::F<'b> == ()`
  --> /Users/bn/Documents/rust_fork/rust/src/test/ui/generic-associated-types/issue-68649.rs:22:5
   |
13 | fn bug<'a, T: for<'b> Fun<F<'b> = ()>>(t: T) -> T::F<'a> {
   |                           ---------- required by this bound in `bug`
...
22 |     bug(x);
   |     ^^^ expected `()`, found integer

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
